# ratatui-textarea

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  cliff.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md
bench/benches/: cursor.rs  delete.rs  insert.rs  search.rs
bench/src/: lib.rs
examples/: editor.rs  minimal.rs  password.rs  placeholder_demo.rs  popup_placeholder.rs  single_line.rs  split.rs  termion.rs  termwiz.rs  tuirs_editor.rs  tuirs_minimal.rs  tuirs_termion.rs  variable.rs  vim.rs  wrap.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: edit.rs  insert_delete.rs
src/: cursor.rs  highlight.rs  history.rs  lib.rs  screen_map.rs  scroll.rs  search.rs  textarea.rs  widget.rs  word.rs  wrap.rs
src/input/: crossterm.rs  mod.rs  termion.rs  termwiz.rs
tests/: cursor.rs  history.rs  input.rs  search.rs  serde.rs  textarea.rs  wrap.rs
