[package]
name = "ratatui-textarea"
version = "0.7.0"
edition = "2021"
rust-version = "1.86.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
ratatui-textarea is a simple yet powerful text editor widget for ratatui.
Multi-line text editor can be easily put as part of your TUI application.
"""
license = "MIT"
homepage = "https://github.com/ratatui/ratatui-textarea"
repository = "https://github.com/ratatui/ratatui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
include = ["/src", "/examples", "/tests", "/README.md", "/LICENSE.txt"]

[features]
default = ["crossterm"]
# Features to use ratatui
crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz"]
# Other optional features
search = ["dep:regex"]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
crossterm = { package = "crossterm", version = "0.28", optional = true }
ratatui = { version = "0.29.0", default-features = false }
regex = { version = "1", optional = true }
termion = { version = "4.0", optional = true }
termwiz = { version = "0.22.0", optional = true }
unicode-width = "0.2.0"
serde = { version = "1", optional = true , features = ["derive"] }

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "editor"
required-features = ["crossterm", "search"]

[[example]]
name = "split"
required-features = ["crossterm"]

[[example]]
name = "single_line"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[[example]]
name = "vim"
required-features = ["crossterm"]

[[example]]
name = "password"
required-features = ["crossterm"]

[[example]]
name = "popup_placeholder"
required-features = ["crossterm"]

[[example]]
name = "termwiz"
required-features = ["termwiz"]

[[example]]
name = "termion"
required-features = ["termion"]

[workspace]
members = ["bench"]

[profile.bench]
lto = "thin"

[dev-dependencies]
serde_json = "1.0.120"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["search", "crossterm", "termwiz", "termion", "serde"]
rustdoc-args = ["--cfg", "docsrs"]
