[package]
name = "ratatui-textarea-bench"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
bench = false

[dependencies]
ratatui-textarea = { path = "..", default-features = false, features = ["search"] }
ratatui = { version = "0.29.0", default-features = false }

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "delete"
harness = false
